添加标准问题实例

--- a/data/nlu/campus_card.yml
+++ b/data/nlu/campus_card.yml
@@ -56,47 +56,6 @@ nlu:
     - 校园卡不见了
     - 校园卡被我弄丢了
     - 校园卡弄丢
-- intent: 校园卡/多久恢复供电和网络
-  examples: |
-    - 在线缴电费和网费后，多久能够恢复供电和网络？
-    - 缴电费和网费后，多久能够恢复供电和网络
-    - 在线缴电费和网费后，多久能够恢复供电和网？
-    - 在线缴电费和网费后多久能够恢复供电网络
-    - 缴电费和网费后，多久能够恢复供电和网
-    - 多久能够恢复供电和网， 已经缴费了
-    - 多久能够恢复供电，刚刚缴费了
-    - 什么时候能恢复网络，已经交费了
-    - 什么时候有网，已经交费了
-    - 缴电费后，多久能够恢复供电
-    - 缴电费后多久能够恢复
-    - 缴网费后多久能够恢复
-    - 缴网费后，多久能够恢复网络
-    - 缴电费后，什么时候能够恢复供电
-    - 缴电费后，什么时候才有电
-    - 交了电费，什么时候才有电
-    - 缴网费后，什么时候能够恢复网络
-    - 缴网费后，什么时候才有网
-    - 缴网费后，嘛时候能够恢复网络
-    - 交了网费，什么时候才有网
-- intent: 校园卡/电费缴费指南
-  examples: |
-    - 深圳大学校园卡电费缴费指南
-    - 深大校园卡电费缴费指南
-    - 电费缴费
-    - 校园卡电费缴费指南
-    - 电费缴费指南
-    - 如何在网上缴电费？
-    - 怎么在网上缴电费？
-    - 缴电费的操作指引
-    - 缴电费的操作引导
-    - 缴电费的操作
-    - 学生怎么在网上缴电费？
-    - 学生怎么在网上交电费
-    - 学生如何在网上缴电费？
-    - 可以在网上缴电费吗？
-    - 怎么缴电费？
-    - 缴电费
-    - 交电费
 - intent: 校园卡/校园卡充值指南
   examples: |
     - 深圳大学校园卡充值指南
@@ -134,6 +93,7 @@ nlu:
     - 体育经费下学期补充
 - intent: 校园卡/自助挂失及解挂
   examples: |
+    - 校园卡自助挂失及解挂
     - 微信可以自助挂失及解挂校园卡
     - 微信可以自助挂失及解挂校卡
     - 微信自助挂失及解挂校园卡
@@ -152,6 +112,7 @@ nlu:
     - 解挂校卡
 - intent: 校园卡/领取微信校园卡
   examples: |
+    - 怎么领取微信校园卡？
     - 领取微信校园卡
     - 怎么领取微信校园卡
     - 微信校园卡怎么领
