--- a/data/nlu/contact_info.yml
+++ b/data/nlu/contact_info.yml
@@ -3,6 +3,8 @@ nlu:
 
   - intent: 常用联系方式/教学秘书联系方式
     examples: |
+      - 各学院（部）教学秘书联系方式
+      - 各学院（部）教务秘书联系方式
       - [电信](department)教学秘书联系方式
       - [计算机学院](department)教学秘书的电话和邮箱
       - 询问[计算机学院](department)教学秘书联系方式
@@ -25,6 +27,7 @@ nlu:
 
   - intent: 常用联系方式/校内常用电话
     examples: |
+      - 校内常用电话
       - [粤海派出所](department)联系方式
       - 深圳大学[保卫部](department)的电话
       - 深圳大学社区联系方式
@@ -41,6 +44,7 @@ nlu:
       
   - intent: 常用联系方式/教师联系方式
     examples: |
+      - 教师联系方式查询
       - 请教一下[传播学院](department)老师们的联系方式在哪里可以查到
       - [管院](department)电商教务联系方式
       - 宋鸣笛老师联系方式
