--- a/data/nlu/employment_guidance.yml
+++ b/data/nlu/employment_guidance.yml
@@ -1,16 +1,6 @@
 version: "2.0"
 nlu:
 
-  - intent: 就业指导/申请回收就业协议书
-    examples: |
-      - 如何申领回收《就业协议书》？
-      - 如何申领回收就业协议书
-      - 怎样申领回收就业协议书
-      - 申领回收《就业协议书》
-      - 请问可以线下申领空白就业协议书吗？
-      - 申领空白就业协议书
-      - 线下申领空白就业协议书
-
   - intent: 就业指导/修改资源信息
     examples: |
       - 修改资源信息
@@ -22,6 +12,7 @@ nlu:
 
   - intent: 就业指导/补办或申领《就业报到证》
     examples: |
+      - 怎么补办或申领《就业报到证》？
       - 补办或申领《就业报到证》
       - 补办或申领就业报到证
       - 补办就业报到证
@@ -42,6 +33,7 @@ nlu:
 
   - intent: 就业指导/补办或申领《就业推荐表》
     examples: |
+      - 怎么补办或申领《就业推荐表》？
       - 补办或申领《就业推荐表》
       - 补办或申领就业推荐表
       - 申领就业推荐表
@@ -76,6 +68,7 @@ nlu:
 
   - intent: 就业指导/怎么签三方协议
     examples: |
+      - 怎么签三方协议？
       - 怎么签三方
       - 教我怎么签三方
       - 签三方要注意什么
@@ -90,6 +83,7 @@ nlu:
 
   - intent: 就业指导/申请毕业生就业补贴
     examples: |
+      - 怎么申请毕业生就业补贴？
       - 毕业生就业补贴申请
       - 怎么申请毕业生就业补贴
       - 申请毕业生就业补贴的流程
@@ -120,6 +114,7 @@ nlu:
 
   - intent: 就业指导/重新签约
     examples: |
+      - 怎么重新签约？
       - 申请重新签约
       - 可以申请重新签约？
       - 怎么申请重新签约？
