--- a/data/nlu/graduate_admission.yml
+++ b/data/nlu/graduate_admission.yml
@@ -10,6 +10,7 @@ nlu:
 
   - intent: 研究生招生/招生专业目录
     examples: |
+      - 深圳大学研究生招生专业目录
       - 深圳大学研究生的招生计划和范围？
       - 研究生招生专业目录
       - 硕士招生专业目录
@@ -24,6 +25,7 @@ nlu:
 
   - intent: 研究生招生/非全日制硕士招生信息
     examples: |
+      - 深圳大学非全日制硕士招生信息
       - 非全日制硕士招生信息
       - 非全日制硕士招生
       - 深大非全日制硕士招生信息
