--- a/data/nlu/library.yml
+++ b/data/nlu/library.yml
@@ -59,6 +59,8 @@ nlu:
   
   - intent: 图书馆服务/查询借阅记录
     examples: |
+      - 怎么查询借阅记录？
+      - 怎么查询图书借阅记录？
       - 如何查询本人的借阅记录？
       - 怎样查询本人的借阅记录
       - 查询借阅记录
