--- a/data/nlu/logistics.yml
+++ b/data/nlu/logistics.yml
@@ -49,6 +49,7 @@ nlu:
 
   - intent: 后勤服务/火车票优惠_身份证未核验
     examples: |
+      - 身份证未核验怎么办？
       - 购买的是电子客票，可凭身份证进站。可是为什么进站刷身份证时，提示“身份证未核验”，不能通过闸机？
       - 进站刷身份证时，提示“身份证未核验”，不能通过闸机
       - 身份证未核验怎么办？
@@ -59,6 +60,7 @@ nlu:
 
   - intent: 后勤服务/火车票优惠_取车票
     examples: |
+      - 自助售取票机上取不了学生票怎么办？
       - 电子客票在车站自助售取票机上取票时为什么不点“互联网取票”而是要点“取报销凭证”才能取出车票？
       - 点“互联网取票”取不了票
       - 点“互联网取票”取不出票
@@ -150,6 +152,7 @@ nlu:
 
   - intent: 后勤服务/宿舍_查询、申请及退宿
     examples: |
+      - 宿舍查询、申请及退宿
       - 新生宿舍查询
       - 宿舍申请入住
       - 申请调宿
@@ -182,6 +185,7 @@ nlu:
 
   - intent: 后勤服务/宿舍_电费查询与充值
     examples: |
+      - 宿舍电费查询与充值
       - 宿舍电费查询
       - 宿舍电费充值
       - 电费查询
@@ -190,6 +194,46 @@ nlu:
       - 怎么充值电费？
       - 怎么充宿舍电费
       - 微信端电费充值
+      - 深圳大学校园卡电费缴费指南
+      - 深大校园卡电费缴费指南
+      - 电费缴费
+      - 校园卡电费缴费指南
+      - 电费缴费指南
+      - 如何在网上缴电费？
+      - 怎么在网上缴电费？
+      - 缴电费的操作指引
+      - 缴电费的操作引导
+      - 缴电费的操作
+      - 学生怎么在网上缴电费？
+      - 学生怎么在网上交电费
+      - 学生如何在网上缴电费？
+      - 可以在网上缴电费吗？
+      - 怎么缴电费？
+      - 缴电费
+      - 交电费
+
+  - intent: 后勤服务/宿舍_多久恢复供电和网络
+    examples: |
+      - 在线缴电费和网费后，多久能够恢复供电和网络？
+      - 缴电费和网费后，多久能够恢复供电和网络
+      - 在线缴电费和网费后，多久能够恢复供电和网？
+      - 在线缴电费和网费后多久能够恢复供电网络
+      - 缴电费和网费后，多久能够恢复供电和网
+      - 多久能够恢复供电和网， 已经缴费了
+      - 多久能够恢复供电，刚刚缴费了
+      - 什么时候能恢复网络，已经交费了
+      - 什么时候有网，已经交费了
+      - 缴电费后，多久能够恢复供电
+      - 缴电费后多久能够恢复
+      - 缴网费后多久能够恢复
+      - 缴网费后，多久能够恢复网络
+      - 缴电费后，什么时候能够恢复供电
+      - 缴电费后，什么时候才有电
+      - 交了电费，什么时候才有电
+      - 缴网费后，什么时候能够恢复网络
+      - 缴网费后，什么时候才有网
+      - 缴网费后，嘛时候能够恢复网络
+      - 交了网费，什么时候才有网
 
 
   - intent: 后勤服务/其他
