--- a/data/nlu/responses/responses.yml
+++ b/data/nlu/responses/responses.yml
@@ -90,6 +90,9 @@ responses:
               支持通过微信校园卡服务大厅充值、内部网-校园卡充值、食堂圈存机充值、中国银行APP充值\n
               [点击查看【深大宿舍电费充值攻略】](https://mp.weixin.qq.com/s/4NAPZSQnUM8sIEPh7NM1cQ)"
 
+  utter_后勤服务/宿舍_多久恢复供电和网络:
+    - text: "用户通过服务平台缴纳电费和网费，划账和恢复都是业务系统实时自动操作的，具体时间根据各个业务系统的处理机制决定，理论上缴纳费用后，供电和网络在当天应可恢复。"
+
   utter_后勤服务/其他:
     - text: "暂时不能回答该问题。"
 
@@ -209,13 +212,6 @@ responses:
   utter_图书馆服务/其他:
     - text: "暂时不能回答该问题。"
 
-  utter_就业指导/申请回收就业协议书:
-    - text: " 1、毕业生在就业中心网站（http://job.szu.edu.cn）, 点击“三方协议申领”按要求填写相关信息登记申领《就业协议书》；
-              2、本人凭校园卡或身份证等证明在就业中心窗口领取《就业协议书》；
-              3、毕业生填写乙方信息后交给用人单位填写相关信息；
-              4、毕业生与用人单位签约后，将协议书送至学院加盖学院公章和就业中心业务专用章；
-              5、将《就业协议书》的第二联鉴证登记单位联交回就业中心窗口登记回收。"
-
   utter_就业指导/修改资源信息:
     - text: "毕业生确认生源地信息时发现资源信息有误，在就业中心窗口填写修改信息登记表，并附上相关证明（生源地有误提交户口本原件及复印件、身份证号或姓名有误提交身份证及复印件，复印件上需本人亲笔签名）。"
 
@@ -318,22 +314,6 @@ responses:
 
   utter_校园卡/校园卡丢失:
     - text: "登录[校园卡服务平台](https://card.szu.edu.cn/)，可点击服务平台首页“校园卡失卡招领通知”（首页中部小喇叭图标处和右侧快速通道处均可），查看失卡招领信息。如失卡信息列表中有您的校园卡，请按照失卡招领公告的方式认领。"
-
-  utter_校园卡/多久恢复供电和网络:
-    - text: "用户通过服务平台缴纳电费和网费，划账和恢复都是业务系统实时自动操作的，具体时间根据各个业务系统的处理机制决定，理论上缴纳费用后，供电和网络在当天应可恢复。"
-
-  utter_校园卡/电费缴费指南:
-    - text: "方式一、圈存机\n
-            1、把校园卡放置读卡槽内，点击购买电费。\n
-            2、输入消费密码→点击确定→进入选择校区界面，确认信息无误→确定→充值成功。取走校园卡，等待送电（半个小时左右）。\n
-            方式二、内部网首页→校园卡→电费缴费（电子服务平台：https://card.szu.edu.cn/）\n
-            用户登录后，在首页选择电费的项目，输入缴费信息，勾选我已阅读并同意缴费服务条款，点击立即缴费。  \n
-            方式三 、中国银行手机APP\n
-            打开APP→生活→生活缴费→校园卡→深圳大学→校园卡、电费、网费\n
-            （温馨提示：以上三个途径在22点以后进行系统结算，期间无法使用！）\n
-            方式四、微信校园卡充值（提供24小时服务）\n
-            小程序微信校园码→我的校园卡→服务大厅→进入系统→绑定房间（首次绑定即可）→充值及查询\n
-            如果已充值成功，电费未到账。请联系：26537164（粤海沧海校区）86930291（丽湖校区）\n"
 
   utter_校园卡/校园卡充值指南:
     - text: "校园卡常用充值途径：\n
