--- a/data/nlu/teaching_affairs.yml
+++ b/data/nlu/teaching_affairs.yml
@@ -2,6 +2,7 @@ version: "2.0"
 nlu:
 - intent: 教学教务/加位
   examples: |
+    - 课程怎么加位？
     - 如果要加位的话我需要怎么做？
     - 如果要加位的话我需要怎么操作
     - 这学期双修的专业必修课没有选上，怎么申请加位
@@ -34,6 +35,7 @@ nlu:
     - 退选预选阶段选中的课
 - intent: 教学教务/切换选课校区
   examples: |
+    - 怎么切换校区选课？
     - 我要选其他校区的课，如何切换选课校区？
     - 我要选其他校区的课，咋样切换选课校区？
     - 咋样切换选课校区？
@@ -49,6 +51,7 @@ nlu:
     - 怎样选择其他校区的课程
 - intent: 教学教务/登录选课系统
   examples: |
+    - 怎么登录选课系统？忘记密码怎么办？
     - 登录选课系统的用户名和密码是什么
     - 登录选课系统的用户名和密码是什么，忘记密码怎么办？
     - 登录选课系统的用户名和密码是什么？密码忘了怎么办？
@@ -90,9 +93,11 @@ nlu:
     - 选课系统进不去怎么办
 - intent: 教学教务/缴学杂费
   examples: |
+    - 怎么缴学杂费？
     - 怎么缴学杂费
     - 缴学杂费
     - 补缴学杂费
+    - 怎么补缴学杂费
 - intent: 教学教务/百度文库
   examples: |
     - 怎么免费下载百度文库的资料
