--- a/data/nlu/undergraduate_admission.yml
+++ b/data/nlu/undergraduate_admission.yml
@@ -15,9 +15,11 @@ nlu:
   - intent: 本科生招生/哪些专业比较好
     examples: |
       - 学校的哪些专业比较好？
+      - 深大的哪些专业比较好？
 
   - intent: 本科生招生/报考要求
     examples: |
+      - 报考深圳大学有什么要求吗？
       - 报考贵校有什么要求吗？
       - 报考深大有什么要求吗？
 
@@ -54,6 +56,7 @@ nlu:
 
   - intent: 本科生招生/转专业
     examples: |
+      - 深大可以转专业吗？
       - 考入深圳大学后可否转专业？
       - 深大可以转专业吗
       - 可以转专业吗
@@ -73,10 +76,12 @@ nlu:
 
   - intent: 本科生招生/主要就业去向
     examples: |
+      - 毕业生主要就业去向？
       - 贵校毕业生主要就业去向？
 
   - intent: 本科生招生/哪些专业招研究生
     examples: |
+      - 哪些专业招研究生？
       - 哪些专业招研究生
       - 你们学校有哪些专业招研究生？
 
