--- a/data/nlu/welcome.yml
+++ b/data/nlu/welcome.yml
@@ -14,6 +14,7 @@ nlu:
 
   - intent: 迎新服务/校园地图
     examples: |
+      - 深圳大学地图
       - 校园地图查询
       - 学校地图
       - 深大地图
@@ -22,6 +23,7 @@ nlu:
 
   - intent: 迎新服务/迁户口
     examples: |
+      - 迁户口相关问题
       - 怎么迁户口
       - 户口迁移是什么？
       - 迁户口到学校需要什么材料？
@@ -34,6 +36,7 @@ nlu:
 
   - intent: 迎新服务/新生心理健康普查
     examples: |
+      - 新生心理健康普查操作指引
       - 新生心理健康普查
       - 心理健康普查
       - 心理健康普查怎么操作
