初步完成CQA和Document QA模块构建

--- a/data/nlu/campus_card.yml
+++ b/data/nlu/campus_card.yml
@@ -56,6 +56,13 @@ nlu:
     - 校园卡不见了
     - 校园卡被我弄丢了
     - 校园卡弄丢
+- intent: 校园卡/校园卡补办
+  examples: |
+    - 怎么补办校园卡？
+    - 校园卡补办
+    - 校园卡怎么补办
+    - 请问该如何补办校园卡
+    - 校园卡从早上到现在一直没找到，请问能补办吗，补办之后大概要多久能拿到，没有校园卡洗澡困难阿。
 - intent: 校园卡/校园卡充值指南
   examples: |
     - 深圳大学校园卡充值指南
@@ -91,6 +98,8 @@ nlu:
     - 毕业生体育经费
     - 体育经费下学期会补充吗？
     - 体育经费下学期补充
+    - 体育经费是每年发放还是
+    - 学校每年什么时候会更新体育经费呀?
 - intent: 校园卡/自助挂失及解挂
   examples: |
     - 校园卡自助挂失及解挂
@@ -117,6 +126,17 @@ nlu:
     - 怎么领取微信校园卡
     - 微信校园卡怎么领
 
+- intent: 校园卡/学生证补办
+  examples: |
+    - 学生证补办
+    - 学生证怎么补办
+    - 请问现在19级新生的学生证要到哪里补办
+    - 怎么补办学生证？
+    - 请问该如何补办学生证
+    - 补办学生证
+    - 补办学生证只需要下载补办登记表然后学院盖章后交到学活就行了吧，还有其他文件吗
+    - 补办学生证需要校园卡吗，校园卡遗失能在学活补办吗？补办学生证大概需要多久，能立刻拿到吗
+
 - intent: 校园卡/其他
   examples: |
     - 校园卡相关问题
@@ -134,6 +154,7 @@ nlu:
     - 刷校园卡出现AECARD提示
     - 通用代扣费账户
     - 校卡补办
+    - 请问该如何补办校园卡
     - 校卡
     - 转专业后校园卡如何办理换卡业务
     - 校园卡补办
@@ -163,6 +184,87 @@ nlu:
     - 补办热水卡没有热水，不知道怎么激活
     - 更改校园卡照片
     - 丽湖校区的校园卡中心在哪
+    - 校友卡问题
+    - 毕业生的校园卡现有余额如何提取？
+    - 热水不够用
+    - 天气降温1.25的热水完全不够用啊，有没有提建议的渠道
+    - 校园卡冻结
+    - 我的校园卡被冻结了，想解冻，请问应该怎么解冻，去哪解冻。
+    - 丽湖校区有补办校园卡的窗口吗
+    - 校园卡丢了，但是身在丽湖，只知道粤海那边能办
+    - 校园卡，过渡余额
+    - 提现过渡余额，不知怎么操作
+    - 校园卡查询密码是什么
+    - 校园卡查询密码是什么
+    - 学校里用水怎么办 水卡
+    - 水卡需要单独办理充值吗 去哪里办理
+    - 转专业后由于校园卡显示的学院信息是原来的学院，需要重新再办一张吗？
+    - 毕业生校园卡退费
+    - 老师您好，请问2018级毕业生校园卡中的余额应该如何退费呢?
+    - 请问校园卡上的照片可以换的吗
+    - 想问一下校园卡上的照片可不可以换的呢
+    - 什么时候能申请助学贷款？要满足什么条件才能申请？谢谢
+    - 现在校园卡补办点还开着吗？
+    - 更改火车区间后需要更换学生证吗？如果需要，要怎么更换
+    - 关于校园银行卡信息更改
+    - 之前改过一次名字，把深圳大学中行卡的信息也更改了，但是在缴学杂费时系统仍然显示的是旧的名字，导致每次缴费都要手动缴费，而且奖学金也不可以顺利发放，请问要找哪个部门解决？
+    - 校园卡好像突然少了钱，请问要去哪里反馈
+    - 校园卡无法洗澡
+    - 我前几天挂失补办了一张新的校园卡，发现它在洗澡间读卡器上总是报错，无法洗澡，我现在在沧海校区，请问这个要怎么解决呢？
+    - 留学生补办校园卡
+    - 请问留学生怎么补办校园卡？
+    - 丽湖校区的校园卡中心在哪
+    - 丽湖校区的校园卡中心在哪，可以办理校园卡延期服务吗？
+    - 校园卡如何延期
+    - 延毕了，校园卡过期，应该怎么申请延期
+    - 现大四快毕业，请问如何将校园卡余额转回银行卡？
+    - 校园卡学生证
+    - 你好，请问延毕学生的校园卡学生证要过期了，要去哪里补办呢？
+    - 校园卡突然刷不了
+    - 校园卡之前使用都正常，突然无法正常刷卡，洗澡和补助机刷校园卡都无反应，不明白是什么情况，是消磁了吗？
+    - 为什么我的体育经费在支付的时候说校园卡被冻结了？
+    - 那校园卡的钱可以转到校园卡绑定的银行卡吗
+    - 校园卡和通用代扣账户
+    - 通用代扣账户的钱怎么取出来？是把通用账户的钱转到校园卡后才可以提现吗？如果是的话如何操作呢？
+    - 补办学生证要到师范学院哪里盖章
+    - 补办的校园卡
+    - 今天补办了校园卡，但是刷不了图书馆门禁怎么回事
+    - 刷校园卡出现AE CARD提示
+    - 从微信上的深圳大学信息中心给校园卡充完值后，刷补助机时有嘀嘀嘀的响声，同时屏幕上显示AE CARD。
+    - 退校园卡费用
+    - 老师您好，我是应用技术学院的学生，由于我开学不太清楚校区和校园卡的使用情况，冲了460元钱到深大校园卡里面，但是我的校区是在坪山这边不能使用，请问有什么办法能退么。谢谢
+    - 请问校园卡消费流水在哪里打印并盖章？校园卡中心的自助机没有打印流水的功能
+    - 想问下  如果因为校园卡欠费而导致无法充值该怎么办呢
+    - 学校校园卡中心工作时间
+    - 学校校园卡中心工作时间是多少 还有周六上班吗
+    - 延毕学生校园码
+    - 校园卡认证显示在校身份已过期，如何解决
+    - 银行卡转校园卡通用代扣费账户
+    - 我银行卡转校园卡通用代扣费账户416.02元之后银行卡信息通知我钱转过去了 ，结果去深大荔枝看我的校园卡通用代扣账户里并没有转过去的那416.02元是怎么回事？？？
+    - 误将金额充值到通用代扣额度中，可以返回吗？
+    - 申请实验室门禁卡
+    - 实验室只有一个师兄的校园卡可以开门，请问如何申请再开一个门禁卡，物业说这不归他们管理。
+    - 转专业后校园卡如何办理换卡业务
+    - 最近刚转了专业，还换了校区，但是发现在另一个校区洗澡的时候热水没法用，而且现在卡上的信息也都是原来的信息，想请问如何变更校园卡信息以及换新的卡？
+    - 请问交宽带的一卡通是指校园卡吗?
+    - 校园卡用不了热水
+    - 用不了热水，不知道是什么问题
+    - 我的校卡丢了，去自助机补办了一张，但是之前那一张没有办挂失，那之前的那一张还可以用吗，有点担心
+    - 新补办的校园卡
+    - 新补办的校园卡，洗澡刷热水一直显示error（红豆斋）
+    - 校卡在图书馆里无法使用，其他地方能正常使用，应如何处理
+    - 毕业生校园卡通用账户余额能否取出
+    - 校园卡通用账户里还有一百多块钱，能否取出，怎样取出
+    - 请问毕业之后，校园卡里剩下的钱可以退回银行卡吗？
+    - 结业生校园卡过期
+    - 您好，我是结业生重修，请问校园卡过期怎么重新开通呢？bb平台老师让我打电话到校园卡中心询问怎么办理，但目前电话未拨通。
+    - 校园卡用不了
+    - 请问校园卡突然就刷不了是怎么回事？应该去哪找谁？
+    - 校园卡充值问题
+    - 昨天在老西南的圈存机给校园卡充值150，之后在旁边补助机刷了之后只是显示到账了140，这种事情是啥情况？那十块钱被吞了吗？
+    - 我是新斋区的，这几天洗澡的时候插上校园卡就会显示err04或者err30，补办了校园卡也不能解决，请问要怎么办
+
+
 
 - synonym: 校园卡
   examples: |
