--- a/data/nlu/contact_info.yml
+++ b/data/nlu/contact_info.yml
@@ -24,6 +24,7 @@ nlu:
       - [国际交流与合作部](department)电话
       - [心理学院](department)教务的联系方式
       - [法学院](department)教务处邮箱
+      - [师范学院](department)教务部联系方式
 
   - intent: 常用联系方式/校内常用电话
     examples: |
@@ -41,6 +42,7 @@ nlu:
       - [教务部](department)电话
       - [体测中心](department)联系方式
       - 深圳大学[学生部](department)联系方式
+      - 我需要宽带的管理员的联系方式，但我找不到
       
   - intent: 常用联系方式/教师联系方式
     examples: |
@@ -201,8 +203,12 @@ nlu:
       - 请问[信工](department)彭长艳老师的办公室和联系方式
       - 冯波涛老师的联系方式
       - 如何查询老师的办公电话
+      - 社科信息素养教程姚兰老师联系方式
+      - 询问教微电子综合实验的耿艳霞老师的办公室地址和联系方式
+      - 求[数学与统计学院](department)杨和平老师的联系方式和办公室地址，谢谢。
 
   - intent: 常用联系方式/其他
     examples: |
       - 常用联系方式
       - 校内常用联系方式
+      - 教学秘书
