--- a/data/nlu/employment_guidance.yml
+++ b/data/nlu/employment_guidance.yml
@@ -178,4 +178,9 @@ nlu:
       - 就业相关问题
       - 就业指导
       - 就业指导相关问题
+      - 毕业生三方毁约/违约
+      - 关于就业指导的登录
+      - 关于求职创业补贴
+      - 求职创业补贴
+      - 暂缓就业
 
