--- a/data/nlu/graduate_admission.yml
+++ b/data/nlu/graduate_admission.yml
@@ -46,3 +46,15 @@ nlu:
       - 研究生学业奖学金发放时间
       - 研究生学业奖学金证书
       - 博士新生助学金
+      - 《深圳大学推荐免试攻读硕士学位研究生资格申请表》
+      - 推免面试工作
+      - 关于推免生资格申请
+      - 推免详情
+      - 推免申请
+      - 竞赛保研
+      - 关于推免、保研
+      - 保研
+      - 关于保研
+      - 保研
+      - 保研条件
+      - 保研
