--- a/data/nlu/hospital.yml
+++ b/data/nlu/hospital.yml
@@ -73,6 +73,14 @@ nlu:
       - 开医保的参保证明
       - 医保补办
       - 医保停保
+      - 医保缴费凭证
+      - 之前叫了医保的费用，想开凭证怎么开呢
+      - 九月份错过大学生医保，就在当时选择放弃参保，现在还能参保吗
+      - 请问错过了第一轮医保缴费有没有补缴的阶段或者有什么办法可以让我去社保局之类的地方自己交嘛？
+      - 校医院可以刷二级社保卡吗
+      - 我的医保昨天就已经缴过费了，也有流水账可查，但是缴费系统一直显示我的状态是未缴费，请问我该怎么办
+      - 就是我的医疗保险错过了9月份统一缴费的时间，有没有什么办法补缴吗？因为最近需要使用
+
 
 
 
