--- a/data/nlu/logistics.yml
+++ b/data/nlu/logistics.yml
@@ -211,6 +211,13 @@ nlu:
       - 怎么缴电费？
       - 缴电费
       - 交电费
+      - 怎么交电费
+      - 电费的使用情况在哪里查询
+      - 请问丽湖二期的电量使用情况在哪可以查询到？
+      - 在内部网的“宿舍用电查询”中没有二期的用电情况。
+      - 微信端充电费要怎么操作
+      - 微信端电费充值
+      - 请问怎么查宿舍还剩多少度电，在宿舍用电查询那里查不到
 
   - intent: 后勤服务/宿舍_多久恢复供电和网络
     examples: |
@@ -332,7 +339,139 @@ nlu:
       - 宿舍电费
       - 调宿后的用电
       - 老生宿舍新生入住
-
+      - 滑板场地
+      - 如何申请暑假留校开展活动场地
+      - 《深圳大学学生活动场地申请使用指引》
+      - 场地申请
+      - 租借科技报告厅或教室
+      - 校园场地申请
+      - 斋区场地申请
+      - 活动场地申请流程
+      - 学生想借场地打比赛应该怎么做？
+      - 查询各教学场地的考试安排
+      - 摆摊申请流程
+      - 教室借用
+      - 南区饭堂门口可以举办活动吗
+      - 学校摆摊
+      - 丽湖校区露天活动场地申请
+      - 关于租借场地
+      - 外来车辆
+      - 南区社会车辆停放
+      - 车辆进入学校
+      - 外来车辆进校
+      - 家长车辆进入学校
+      - 车辆
+      - 校外车怎样才可以进入校内
+      - 毕业生开车进校搬行李
+      - 教工餐厅学生何时可以用餐
+      - 饭堂食品安全
+      - 提前点饭
+      - 海报张贴
+      - 公司宣讲海报张贴（丽湖校区）
+      - 公司招聘宣讲会
+      - 海报张贴
+      - 南区冬筑宿舍楼下海报张贴
+      - 关于新生快递寄存
+      - 快递寄件
+      - 寒假快递点安排
+      - 体育场馆预订系统什么时候开放
+      - 军训结束后，体育场馆开放时间
+      - 体育场馆线上预约支付不了
+      - 体育场馆预约问题
+      - 关于体育场馆
+      - 体育场馆预定时间
+      - 场馆
+      - 南区天台篮球场包场
+      - 西门的单车
+      - 校区往返校车
+      - 粤海到丽湖的班车
+      - 校外入校
+      - 校外人员入校
+      - 本周末可以带家长入校吗
+      - 校外人员如何申请入校
+      - 预约
+      - 维修
+      - 申请校外人员入校
+      - 深圳大学住宿管理办法在哪查看全文
+      - 20级毕业生想回学校办事
+      - 文科楼的长椅可以借用吗？
+      - 丽湖琴房
+      - 文科楼H2－400空调声音很吵
+      - 深大抬头纸
+      - 深大信封
+      - 关于寒假留校
+      - 申请教室
+      - 教室申请
+      - 体育社团申请科技楼报告厅
+      - 文科楼教室申请
+      - 教室借用
+      - 寒假留校
+      - 国庆体育馆是否开放
+      - 如何申请三助岗位？
+      - 三助一辅岗位
+      - 丽湖校区研究生社团申请会议室或教室
+      - 毕业生离校
+      - 勤工助学申请
+      - 教室借用
+      - 申请勤工助学
+      - 非毕业班研究生临时返校申请
+      - 研究生二年级返校时间
+      - 希望能说明非毕业生何时能返校
+      - 丽湖校区健身房预约
+      - 暑假进出学校事宜
+      - 校外人员回学校上课
+      - 学生资质核验
+      - 勤工助学相关
+      - 五一放假安排
+      - 询问国庆放假相关事宜
+      - 放假
+      - 返校日期
+      - 研究生毕业离校事宜
+      - 军训免训申请
+      - 大一军训
+      - 军训免训申请
+      - 寒假以及军训时间
+      - 军训服领取
+      - 三助一辅咨询
+      - 三助一辅
+      - 军训
+      - 请问南区自习室什么时候开？
+      - 自习室
+      - 有关乔相的自习室
+      - 通宵自习室
+      - 风槐楼下自习室
+      - 自习室开放
+      - 南区理工楼自习室
+      - 创建新社团
+      - 关于社团创建相关事务
+      - 健身房购票权被禁
+      - 朗读背诵教室安排
+      - 更改学生优惠证乘车区间
+      - 请问如何更改乘车区间呢？
+      - 学校的保龄球馆和高尔夫球馆如何预约
+      - 请问毕业后可否作为校友使用校内体育场馆？
+      - 2月1日后学校要求未经审批不得随意进出，请问这段时间留校实习的学生如何进出？
+      - 实习学生出入校问题
+      - 体育场馆预约问题
+      - 请问保龄球在哪个场馆？需要预约吗？在学校的内部网—-体育场馆预约那里找不到，以及现在是否还开放？
+      - 请问补办区间优惠火车票需要校园卡吗
+      - 请问今年还能更改火车乘坐区间吗，若有大概是什么时候？
+      - 我去年休学，本学期已复学返校。现在账户内没有体育经费，请问如何申请？
+      - 研究生新生入住前调宿
+      - 个人信息采集表
+      - 请问一下办理员工临时卡的“个人信息采集表”在哪里下载？
+      - 体育经费为0
+      - 近一年没有使用体育经费，发现经费为0，是什么情况？为什么会被清0？
+      - 转专业后如果在原校区还需要换宿舍吗
+      - 没有收到退宿费
+      - 昨天七月1号第二批退宿费发放仍未收到。
+      - 研究生毕业离校事宜
+      - 请问研究生毕业离校具体需要办理哪些手续（譬如填表、盖章、退宿等流程之类）？
+      - 什么时间可以开始办理研究生毕业离校？
+      - 本人是在校生，身份证过了有效期限，需要异地换领身份证，但发现未进行居住登记，而没有有效的身份证能否进行登记？近期能否进行申报登记？
+      - 居住登记
+      - 学生证乘车区间如何修改
+      - 想修改学生证乘车区间
 
   - synonym: 如何
     examples: |
