--- a/data/nlu/network.yml
+++ b/data/nlu/network.yml
@@ -9,6 +9,7 @@ nlu:
     - 同问校外VPN访问
     - VPN怎么用
     - vpn使用方法
+    - VPN登录
 
 - intent: 校园网服务/校园宽带开通
   examples: |
@@ -62,3 +63,36 @@ nlu:
     - 网络缴费
     - 在图书馆无法连接校内网
     - 宿舍宽带如何续
+    - 内部网用户名更正
+    - 内网程序有问题
+    - 网上缴费系统打不开
+    - 请问学校内部C程序OnlineJudge平台的地址
+    - 学子天地上不去
+    - 视听说网址登录
+    - MATLAB激活- - 邮件收不到
+    - 集群号如何取消
+    - 丽湖校区通讯信号问题
+    - 账号异常问题
+    - 交医保的网站打不开
+    - 新生学生邮箱开通时间
+    - 学生邮箱密码找回
+    - 19级研究生学生邮箱激活
+    - 学生邮箱密码忘记无法找回
+    - 学生邮箱
+    - 学生邮箱被禁用是为何
+    - 关于新生学生邮箱
+    - 请问校园邮箱如何重置密码
+    - 企业邮箱被禁用
+    - 学生邮箱
+    - 学生校园邮箱
+    - 学生邮箱毕业后是否能继续使用
+    - 学生邮箱密码忘记了怎么办
+    - 邮箱绑定
+    - 关于企业邮箱的有效期
+    - 统一身份认证接口
+    - 网络无法连接
+    - 宿舍宽带如何续
+    - 发现十一月得重新买宽带，但是在内部网选择后，并没有扣费续宽带，仍然说本账号暂停试用。
+    - 我需要挂学校的svpn做实验，可是用户名和密码总是显示错误。有尝试过学号校园卡和身份证后6位和后8位的组合。
+    - easy connect登录密码忘记，无法正常登录BB，严重影响学校网上学习和作业提交，请求帮助
+
