--- a/data/nlu/responses/responses.yml
+++ b/data/nlu/responses/responses.yml
@@ -347,6 +347,12 @@ responses:
   utter_校园卡/领取微信校园卡:
     - text: "[点击领取微信校园卡](https://weixiao.qq.com/apps/public/wxwork-cards/index.html?school_code=4144010590)"
 
+  utter_校园卡/校园卡补办:
+    - text: "校园卡补办可前往校园卡中心进行自助补办，自助补办地址：汇紫楼C、D座走廊，自助补卡机办公时间：周一至周日9:00-20:00，且自助补卡机仅供全日制大陆在校学生补办校园卡（教工卡、港澳台、留学生不可）。 "
+
+  utter_校园卡/学生证补办:
+    - text: "同学可自行前往学院院办开具《学生证补办登记表》，登记表上需有学院的签字和盖章，然后携带补办登记表，校园卡，一寸或大一寸照片，前往学生事务服务中心3号窗口补办即可。周一至周四办理学生证，可于周五上午领取；周五办理，则于下周五上午领取。"
+
   utter_校园卡/其他:
     - text: "暂时不能回答该问题。"
 
